--- a/app/views/shared/_create_account_form.html.erb
+++ b/app/views/shared/_create_account_form.html.erb
@@ -1,16 +1,20 @@
 <%= form_for resource, namespace: 'new', url: registration_path("user"), html: {autocomplete: "off", id: "create_account_form"} do |f| %>
 
-  <div class="form-control mb-3">
+  <div class="form-control">
     <%= f.label(:firstname, _('First Name'), class: "form-label") %>
     <%= f.text_field(:firstname, class: "form-control", "aria-required": true) %>
   </div>
-  <div class="form-control mb-3">
+  <div class="form-control">
     <%= f.label(:surname, _('Last Name'), class: "form-label") %>
     <%= f.text_field(:surname, class: "form-control", "aria-required": true) %>
   </div>
   <div class="form-control mb-3">
     <%= f.label(:email, _('Email'), class: "form-label") %>
     <%= f.email_field(:email, class: "form-control", "aria-required": true) %>
+  </div>
+  <div class="form-control mb-3">
+    <%= f.label(:email_confirmation, _('Confirm Email'), class: "form-label") %>
+    <%= f.email_field(:email_confirmation, class: "form-control", "aria-required": true) %>
   </div>
   <div class="form-control mb-3" id="create-account-org-controls">
     <%= render partial: org_partial,
