--- a/app/views/super_admin/orgs/new.html.erb
+++ b/app/views/super_admin/orgs/new.html.erb
@@ -12,8 +12,8 @@
 <div class="row">
   <div class="col-md-12">
     <ul class="nav nav-tabs" role="tablist">
-      <li role="profile" class="active">
-        <a href="#profile" role="tab" aria-controls="profile" data-toggle="tab"><%= _('Profile information') %></a>
+      <li role="profile" class="nav-item">
+        <a class="nav-link active" href="#profile" role="tab" aria-controls="profile" data-bs-toggle="tab"><%= _('Profile information') %></a>
       </li>
     </ul>
 
