--- a/app/views/usage/_user_statistics.html.erb
+++ b/app/views/usage/_user_statistics.html.erb
@@ -52,11 +52,8 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-      <div class="col-md-6 float-start">
+      <div class="col-md-6">
           <p class="bold fontsize-h4"><%= _('No. plans by template') %></p>
-      </div>
-
-      <div class="col-md-6 float-end">
           <ul class="list-inline">
             <li>
               <%= form_for :usage, url: usage_plans_by_template_path, remote: true do |f| %>
@@ -64,7 +61,7 @@
                   <%= f.label :template_plans_range, _('Time period') %>
                   <ul class="list-inline">
                     <li>
-                      <%= f.select :template_plans_range, plans_per_template_ranges.reverse, {}, { class: "form-control" } %>
+                      <%= f.select :template_plans_range, plans_per_template_ranges, {prompt: _("--Select--")}, { class: "form-select" } %>
                     </li>
                     <li>
                       <%= hidden_field_tag :filtered, @filtered %>
@@ -87,6 +84,7 @@
       </div>
     </div>
   </div>
+
   <div class="row">
       <div class="col-md-12" style="position: relative; width: 100%; height: 100%">
          <div id="plans_by_template_chart">
