--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -47,14 +47,16 @@
       </h2>
       <div class="row">
         <div class="form-control mb-3 col-md-8">
-          <%= f.text_field(:title, class: 'form-control', 'aria-labelledby': 'template-selection', 'aria-required': 'true', 'aria-label': 'template-selection',
-                'data-toggle': 'tooltip',
-                'data-placement': 'bottom',
-                spellcheck: true) %>
+          <%= f.select(:template_id, grouped_options_for_select(@templates_grouped),
+                      { include_blank: _('--Select--') },
+                      class: 'form-control',
+                      'aria-labelledby': 'template-selection', 
+                      'aria-required': 'true', 
+                      'data-toggle': 'tooltip',
+                      'data-placement': 'bottom') %>
         </div>
       </div>
 
-      <%= f.hidden_field(:visibility, value: @is_test ? 'is_test' : Rails.configuration.x.plans.default_visibility) %>
       <%= f.button(_('Create'), class: "btn btn-primary", type: "submit") %>
       <%= link_to _('Cancel'), plans_path, class: 'btn btn-secondary' %>
     <% end %>
