--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -48,8 +48,8 @@
       <div class="row">
         <div class="form-control mb-3 col-md-8">
           <%= f.select(:template_id, grouped_options_for_select(@templates_grouped),
-                      { include_blank: _('--Select--') },
-                      class: 'form-control',
+                      { prompt: _('--Select--') },
+                      class: 'form-select',
                       'aria-labelledby': 'template-selection', 
                       'aria-required': 'true', 
                       'data-toggle': 'tooltip',
