--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -1,11 +1,3 @@
-<% title _('Create a new plan') %>
-<% required_project_title_tooltip = _('This field is required.') %>
-<% project_title_tooltip = _('If applying for funding, state the project title exactly as in the proposal.') %>
-<% required_research_org_tooltip = _('You must select a research organisation from the list or click the checkbox.') %>
-<% research_org_tooltip = _('Please select a valid research organisation from the list.') %>
-<% required_primary_funding_tooltip = _('You must select a funder from the list or click the checkbox.') %>
-<% primary_funding_tooltip = _('Please select a valid funding organisation from the list.') %>
-
 <div class="row">
   <div class="col-md-12">
     <h1><%= _('Create a new plan') %></h1>
@@ -17,48 +9,69 @@
 </div>
 
 <div class="row">
-  <div class="col-md-12">
-    <%= form_for Plan.new, url: plans_path do |f| %>
+  <div class="col-12">
+    <form action="<%= plans_path %>" method="post">
+      <!-- Rails form authenticity token -->
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
       <!-- Plan name section -->
-      <h2 id="project-title">
-        <span class="red" title="<%= required_project_title_tooltip %>">*<em class="sr-only"><%= required_project_title_tooltip %></em> </span><%= _('Enter project title') %>
-      </h2>
-      <div class="row">
-        <div class="form-control mb-3 col-md-8">
-          <%= f.text_field(:title, class: 'form-control', 'aria-labelledby': 'project-title', 'aria-required': 'true', 'aria-label': 'project-title',
-                'data-toggle': 'tooltip',
-                'data-placement': 'bottom',
-                spellcheck: true,
-                title: project_title_tooltip ) %>
-        </div>
-        <div class="form-control mb-3 col-md-6">
-          <div class="checkbox">
-            <%= label_tag(:is_test) do %>
-              <%= check_box_tag(:is_test, "1", false) %>
-              <%= _('Mock project for testing, practice, or educational purposes') %>
-            <% end %>
+      <div>
+        <label for="plan_title" id="project-title" class="form-label">
+          <%= _('Enter project title') %>
+        </label>
+        <input type="text"
+              id="plan_title"
+              name="plan[title]"
+              class="form-control"
+              aria-labelledby="project-title"
+              aria-required="true"
+              aria-label="project-title"
+              data-toggle="tooltip"
+              data-placement="bottom"
+              spellcheck="true">
+      </div>
+      <!-- Is-test checkbox -->
+      <div>
+        <div class="form-check">
+          <input type="checkbox"
+                 class="form-check-input"
+                 id="is_test"
+                 value="1">
+          <label class="form-check-label" for="is_test">
+            <%= _('Mock project for testing, practice, or educational purposes') %>
           </div>
         </div>
       </div>
 
       <!-- Template selection -->
-      <h2>
-        <span class="red">*<em class="sr-only"></em> </span><%= _('Select a DMP template') %>
-      </h2>
-      <div class="row">
-        <div class="form-control mb-3 col-md-8">
-          <%= f.select(:template_id, grouped_options_for_select(@templates_grouped),
-                      { prompt: _('--Select--') },
-                      class: 'form-select',
-                      'aria-labelledby': 'template-selection', 
-                      'aria-required': 'true', 
-                      'data-toggle': 'tooltip',
-                      'data-placement': 'bottom') %>
-        </div>
+      <div>
+        <label for="template_id" id="dmp-template" class="form-label">
+          <%= _('Select a DMP template') %>
+        </label>
+        <select id="template_id"
+                name="plan[template_id]"
+                class="form-select"
+                aria-labelledby="template-selection"
+                aria-required="true"
+                data-toggle="tooltip"
+                data-placement="bottom">
+        <option value=""><%= _('--Select--') %></option>
+        <% @templates_grouped.each do |group_label, group_templates| %>
+          <optgroup label="<%= group_label %>">
+            <% group_templates.each do |template_title, template_id| %>
+              <option value="<%= template_title %>">
+                <%= template_id %>
+              </option>
+            <% end %>
+          </optgroup>
+        <% end %>
       </div>
 
-      <%= f.button(_('Create'), class: "btn btn-primary", type: "submit") %>
+      <!-- Submit and Cancel buttons -->
+      <button type="submit" class="btn btn-primary">
+        <%= _('Create') %>
+      </button>
       <%= link_to _('Cancel'), plans_path, class: 'btn btn-secondary' %>
-    <% end %>
+    </form>
   </div>
 </div>
