--- a/app/assets/stylesheets/blocks/_forms.scss
+++ b/app/assets/stylesheets/blocks/_forms.scss
@@ -1,17 +1,31 @@
-@use '../variables/colours' as *;
+// @use '../variables/colours' as *;
 
-.form-control input, .form-control textarea, .form-control select{
-    border: 2px solid $color-border-light;
-}
+// .form-control input, .form-control textarea, .form-control select{
+//     border: 2px solid $color-border-light;
+// }
 
-.form-check {
-    padding-left: 0rem;
-}
+// .form-check {
+//     padding-left: 0rem;
+// }
 
-.form-inline{
-    margin-bottom: 5px;
-}
+// .form-inline {
+//     margin-bottom: 5px;
+// }
 
-.form-check-label {
-    padding-left: 5px;
+// .form-check-label {
+//     padding-left: 5px;
+// }
+
+// .roadmap-form {
+//   .form-group {
+//     margin-bottom: 1.5rem;
+//   }
+
+//   .form-check {
+//     margin-top: 0.5rem;
+//   }
+// }
+
+.roadmap-form {
+  border: 2px solid blue;
 }
